--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
-
+python:
+  - "2.7"
+  - "3.4"
+  - "nightly"
+  
 before_script:
   - sudo apt-get update -q
   - sudo apt-get install pandoc
@@ -7,3 +11,6 @@ before_script:
 
 script:
   - pandoc -N name.md --latex-engine=pdflatex -o name.pdf
+  - python --version
+  - python py-ex/ex.py
+  
