--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ python:
   - "2.7"
   - "3.4"
   - "nightly"
-  
+
+install:
+  - pip install .
+  - pip install numpy
+
 before_script:
   - sudo apt-get update -q
   - sudo apt-get install pandoc
