--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ compiler:
   - gcc
 
 install:
-  - ./cmake-compile.sh
-  - ./petsc-compile.sh
+  - apt-get update -q
+  - apt-get install 
+  - travis_wait ./cmake-compile.sh
+  - travis_wait ./petsc-compile.sh
 
 script:
    - cmake-3.2.3/bin/cmake --version
