--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 sudo: required
 
 install:
-  - apt-get update -q
+  - sudo apt-get update -q
   - travis_wait ./cmake-compile.sh
   - travis_wait ./petsc-compile.sh
 
