--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - sudo apt-get update -q
   - sudo apt-get install gfortran
   - travis_wait ./petsc-compile.sh
+  - travis_wait ./cmake-compile.sh
 
 script:
    - ls -l
